chore: Add enable-preview compiler argument to build.gradle